# tyngd

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: exercise.rs  main.rs  schema.rs
templates/: home.hbs  home.html.hbs
