[package]
name = "tyngd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["mysql"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rocket = "0.4.11"
rocket_contrib = {version ="0.4.11", features = ["handlebars_templates", "tera_templates"]}
rocket_db_pools = "0.1.0-rc.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
