[package]
name = "tyngd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["mysql"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars", "tera"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
